infrastructure/ingress/traefik/base/08-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: monitoring
spec:
  basicAuth:
    secret: traefik-dashboard-auth
