infrastructure/ingress/traefik/base/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: monitoring
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.10.5
          args:
            - --configfile=/config/traefik.yaml
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: metrics
              containerPort: 8082
          resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "300m"
              memory: "150Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: traefik-data
              mountPath: /data
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 2
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: traefik-data
          persistentVolumeClaim:
            claimName: traefik-data
