infrastructure/ingress/traefik/base/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: web
      targetPort: web
    - port: 443
      name: websecure
      targetPort: websecure
    - port: 8082
      name: metrics
      targetPort: metrics
  selector:
    app: traefik
